tests/snapshots/cli__add@comments_before_brace_vmsh.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/comments_before_brace.flake.nix"
    - "--diff"
    - add
    - vmsh
    - "github:mic92/vmsh"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -5,5 +5,6 @@
 {
   description = "A flake with comments before the opening brace";
   inputs.nixpkgs.url = "github:NixOS/nixpkgs/nixos-unstable";
+  inputs.vmsh.url = "github:mic92/vmsh";
   outputs = _: { };
 }

----- stderr -----
