tests/snapshots/cli__add@completely_flat_toplevel_alt_vmsh.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/completely_flat_toplevel_alt.flake.nix"
    - "--diff"
    - add
    - vmsh
    - "github:mic92/vmsh"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -11,6 +11,7 @@
     crane.inputs.rust-overlay.follows = "rust-overlay";
     crane.url = "github:ipetkov/crane";
     crane.inputs.flake-utils.follows = "flake-utils";
+    vmsh.url = "github:mic92/vmsh";
   };

   outputs = _: { };

----- stderr -----
