tests/snapshots/cli__add@completely_flat_toplevel_vmsh.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/completely_flat_toplevel.flake.nix"
    - "--diff"
    - add
    - vmsh
    - "github:mic92/vmsh"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -10,6 +10,7 @@
   inputs.crane.inputs.nixpkgs.follows = "nixpkgs";
   inputs.crane.inputs.rust-overlay.follows = "rust-overlay";
   inputs.crane.inputs.flake-utils.follows = "flake-utils";
+  inputs.vmsh.url = "github:mic92/vmsh";

   outputs = _: { };
 }

----- stderr -----
