tests/snapshots/cli__add@first_nested_node_vmsh.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/first_nested_node.flake.nix"
    - "--diff"
    - add
    - vmsh
    - "github:mic92/vmsh"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -12,6 +12,7 @@
       url = "github:edolstra/flake-compat";
       flake = false;
     };
+    vmsh.url = "github:mic92/vmsh";
   };

   outputs =
@@ -21,6 +22,7 @@
       utils,
       naersk,
       flake-compat,
+      vmsh,
     }:
     { };
-}
+}
\ No newline at end of file

----- stderr -----
