tests/snapshots/cli__add@flat_nested_flat_vmsh.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/flat_nested_flat.flake.nix"
    - "--diff"
    - add
    - vmsh
    - "github:mic92/vmsh"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -8,6 +8,7 @@
     inputs.nixpkgs.follows = "nixpkgs";
     url = "github:nix-community/poetry2nix/master";
   };
+  inputs.vmsh.url = "github:mic92/vmsh";

   outputs =
     {
@@ -17,4 +18,4 @@
       poetry2nix,
     }:
     { };
-}
+}
\ No newline at end of file

----- stderr -----
