tests/snapshots/cli__add@let_wrapped_vmsh.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/let_wrapped.flake.nix"
    - "--diff"
    - add
    - vmsh
    - "github:mic92/vmsh"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -2,5 +2,6 @@
   system = "x86_64-linux";
 in {
   inputs.nixpkgs.url = "github:nixos/nixpkgs";
+  inputs.vmsh.url = "github:mic92/vmsh";
   outputs = { self, nixpkgs }: { };
 }

----- stderr -----
