tests/snapshots/cli__add@one_level_nesting_flat_vmsh.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/one_level_nesting_flat.flake.nix"
    - "--diff"
    - add
    - vmsh
    - "github:mic92/vmsh"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -11,6 +11,7 @@
     crane.inputs.nixpkgs.follows = "nixpkgs";
     crane.inputs.rust-overlay.follows = "rust-overlay";
     crane.inputs.flake-utils.follows = "flake-utils";
+    vmsh.url = "github:mic92/vmsh";
   };

   outputs =
@@ -21,6 +22,7 @@
       flake-utelinos,
       rust-overlay,
       crane,
+      vmsh,
     }:
     { };
-}
+}
\ No newline at end of file

----- stderr -----
