tests/snapshots/cli__add@root_alt_vmsh.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/root_alt.flake.nix"
    - "--diff"
    - add
    - vmsh
    - "github:mic92/vmsh"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -21,6 +21,7 @@
         flake-utils.follows = "flake-utils";
       };
     };
+    vmsh.url = "github:mic92/vmsh";
   };

   outputs = _: { };

----- stderr -----
