tests/snapshots/cli__add@toplevel_nesting_vmsh.snap
---
source: tests/cli.rs
info:
  program: flake-edit
  args:
    - "--flake"
    - "[FIXTURES]/toplevel_nesting.flake.nix"
    - "--diff"
    - add
    - vmsh
    - "github:mic92/vmsh"
  env:
    NO_COLOR: "1"
---
success: true
exit_code: 0
----- stdout -----
--- original
+++ modified
@@ -15,6 +15,7 @@
     inputs.rust-overlay.follows = "rust-overlay";
     inputs.flake-utils.follows = "flake-utils";
   };
+  inputs.vmsh.url = "github:mic92/vmsh";

   outputs = _: { };
 }

----- stderr -----
